kube/luckytigers-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: luckytigers
  namespace: default
spec:
  ports:
    - port: 842
      targetPort: 80
  selector:
    service: luckytigers
  type: NodePort
